--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "0.17.1",
     "expo-permissions": "~13.0.3",
     "expo-barcode-scanner": "~11.1.2",
-    "react-native-maps": "0.28.1"
+    "react-native-maps": "0.28.1",
+    "expo-app-loading": "~1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
