--- a/package.json
+++ b/package.json
@@ -14,25 +14,31 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
-    "expo-camera": "~12.0.3",
+    "expo-app-loading": "~1.2.1",
+    "expo-barcode-scanner": "~11.1.2",
+    "expo-camera": "^12.0.3",
+    "expo-file-system": "~13.0.3",
     "expo-linear-gradient": "~10.0.3",
+    "expo-permissions": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-barcode-mask": "^1.2.4",
     "react-native-bottom-drawer-view": "^1.0.3",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.2",
+    "react-native-image-picker": "^4.3.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "0.28.1",
     "react-native-permissions": "^3.1.0",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "expo-permissions": "~13.0.3",
-    "expo-barcode-scanner": "~11.1.2",
-    "react-native-maps": "0.28.1",
-    "expo-app-loading": "~1.2.1"
+    "expo-image-picker": "~11.0.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "expo-media-library": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
