--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "expo-permissions": "~13.0.3",
     "expo-barcode-scanner": "~11.1.2",
     "react-native-maps": "0.28.1",
-    "expo-app-loading": "~1.2.1"
+    "expo-app-loading": "~1.2.1",
+    "expo-location": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
