feat: impl ID & Vacc card && storage

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "expo-app-loading": "~1.2.1",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
-    "@react-native-picker/picker": "2.1.0"
+    "@react-native-picker/picker": "2.1.0",
+    "expo-media-library": "~13.0.3",
+    "expo-image-picker": "~11.0.3",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
